--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,14 +19,18 @@
 
 /* Global Colors - The following color variables are used throughout the website. Updating them here will change the color scheme of the entire website */
 :root { 
-  --background-color: #F5578D; /* Background color for the entire website, including individual sections */
+  --background-color: #191f18; /* Background color for the entire website, including individual sections */
   --default-color: rgba(255, 255, 255, 0.8); /* Default color used for the majority of the text content across the entire website */
   --heading-color: #e0e9f2; /* Color for headings, subheadings and title throughout the website */
   --accent-color: #e3a127; /* Accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out */
   --surface-color: #1b262c; /* The surface color is used as a background of boxed elements within sections, such as cards, icon boxes, or other elements that require a visual separation from the global background. */
   --contrast-color: #ffffff; /* Contrast color for text, ensuring readability against backgrounds of accent, heading, or default colors. */
+  --default-pink: #f0578b;
+  --default-lemon: #e1e783;
+  --default-green: #32602f;
   --default-yellow: #e3f47f;
-  --default-black: #000000;
+  --default-beige: #edf3cd;
+  --default-black: #191f18;
 }
 
 /* Nav Menu Colors - The following color variables are used specifically for the navigation menu. They are separate from the global colors to allow for more customization options */
@@ -93,9 +97,23 @@ h6 {
   font-family: Benzin-Bold;
   src: url("../fonts/Benzin-Bold.ttf");
 }
+@font-face {
+  font-family: Benzin-Regular;
+  src: url("../fonts/Benzin-Regular.ttf");
+}
+
 .title-font {
   font-family: Benzin-Bold;
   color: #e3f47f;
+  
+}
+
+.title-font .font-regular {
+  font-family: Benzin-Regular;
+}
+
+.title-font .font-bold {
+  font-family: Benzin-Bold;
 }
 
 /* PHP Email Form Messages
@@ -163,10 +181,18 @@ h6 {
 }
 
 .header .header-container {
-  background: var(--surface-color);
+  background: var(--background-color);
   border-radius: 50px;
   padding: 5px 25px 5px 30px;
-  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1); */
+  /* opacity: 1; */
+  /* transition: opacity 0.3s ease; */
+}
+
+/* When scrolled, make header fully visible */
+body.scrolled .header .header-container {
+  /* opacity: 1; */
+  background: var(--default-beige);
 }
 
 .header .logo {
@@ -852,28 +878,28 @@ section,
 }
 
 .hero .main-heading h1 {
-  font-size: 5rem;
+  font-size: 3rem;
   font-weight: 800;
   line-height: 1.1;
   letter-spacing: -1px;
   margin: 0;
 }
-
-@media (max-width: 1200px) {
+/* 1200px */
+@media (max-width: 1395px) {
   .hero .main-heading h1 {
-    font-size: 4rem;
+    font-size: 2.3rem;
   }
 }
 
 @media (max-width: 767px) {
   .hero .main-heading h1 {
-    font-size: 3rem;
+    font-size: 2.2rem;
   }
 }
 
 @media (max-width: 480px) {
   .hero .main-heading h1 {
-    font-size: 2.5rem;
+    font-size: 1.8rem;
   }
 }
 
